# mover

./: .gitignore  Cargo.toml  README.md
examples/: basic_mouse.rs
mover/: Cargo.toml
mover-core/: Cargo.toml
mover-core/src/: error.rs  lib.rs  platform.rs  types.rs
mover-core/src/platform/: linux.rs  macos.rs  windows.rs
mover-keyboard/: Cargo.toml  README.md
mover-keyboard/examples/: keyboard_demo.rs
mover-keyboard/src/: lib.rs
mover-macros/: Cargo.toml
mover-macros/src/: lib.rs
mover-mouse/: Cargo.toml
mover-mouse/examples/: mouse_demo.rs
mover-mouse/src/: lib.rs
mover-screen/: Cargo.toml
mover-screen/src/: lib.rs
mover-utils/: Cargo.toml
mover-utils/src/: lib.rs
mover/src/: lib.rs  main.rs
