[package]
name = "mover-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Utility functions and helpers for the mover automation library"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
mover-core = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
